node-main/deps/v8/test/message/mjsunit/fail/assert-promise-result-rejects.out
test/mjsunit/mjsunit.js:{NUMBER}: Error: Error in reject handler
              throw concatenateErrors(stack, e);
              ^
Error
    at assertPromiseResult (test/mjsunit/mjsunit.js:{NUMBER}:{NUMBER})
    at *%(basename)s:9:1

Error: Error in reject handler
    at *%(basename)s:11:17
    at test/mjsunit/mjsunit.js:{NUMBER}:{NUMBER}


